--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -105,6 +105,23 @@ a {
 		}
 	}
 }
+.pagecounter {
+	display: none;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	width: 200px;
+	height: 200px;
+	background-color: rgba(0,0,0,0.43);
+	border-radius: 40px;
+	line-height: 1em;
+	text-align: center;
+	font-size: 180px;
+	font-weight: bold;
+	color: rgba(255,255,255,0.78);
+	margin: -100px 0 0 -100px;
+	text-indent: -5px;
+}
 .footer {
 	width: 960px;
 	margin: 0 auto;
