--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -35,10 +35,12 @@ a {
 .list-title {
   width: 960px;
   min-height: 50px;
+  line-height: 50px;
 	margin: 0 auto;
 	color: #fff;
 	border-bottom: 1px solid #222;
 	box-shadow: 0px 1px 0px rgba(255,255,255,0.07);
+	font-size: 24px;
 }
 .shot-list {
 	width: 990px;
