--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html(class="#{controller_name} #{action_name}")
   %head
-    %title Dribbble2x
+    %title Dribbble2x - Dribbble @2x Viewer(Alpha)
     = stylesheet_link_tag "application", :media => "all"
     = csrf_meta_tags
     = javascript_include_tag "application"
