Change the paths.
TODO : 상단바 고정이 편하겠어.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,9 @@
     
   %body(class="#{controller_name} #{action_name}")
     .topbar
-      %h1 Dribbble2x
+      %h1 
+        %a{:href => "/"}
+          Dribbble2x
     .body
       = yield
     .footer
